force-app/main/default/objects/BeatStop__c/BeatStop__c.object-meta.xml
<CustomObject>
    <label>Beat Stop</label>
    <pluralLabel>Beat Stops</pluralLabel>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Beat Stop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BeatRoute__c</fullName>
        <label>Beat Route</label>
        <referenceTo>BeatRoute__c</referenceTo>
        <relationshipLabel>Beat Stops</relationshipLabel>
        <relationshipName>BeatStops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <required>true</required>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <label>Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Beat Stops</relationshipLabel>
        <relationshipName>BeatStops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckinWindowStart__c</fullName>
        <label>Check-in Window Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckinWindowEnd__c</fullName>
        <label>Check-in Window End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PlannedActivitiesJSON__c</fullName>
        <label>Planned Activities JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>