force-app/main/default/objects/BeatStop__c/fields/CheckinWindowEnd__c.field-meta.xml
<CustomField>
    <fullName>CheckinWindowEnd__c</fullName>
    <label>CheckinWindowEnd</label>
    <type>DateTime</type>
</CustomField>