force-app/main/default/objects/BeatStop__c/fields/CheckinWindowStart__c.field-meta.xml
<CustomField>
    <fullName>CheckinWindowStart__c</fullName>
    <label>CheckinWindowStart</label>
    <type>DateTime</type>
</CustomField>