force-app/main/default/objects/BeatStop__c/fields/PlannedActivitiesJSON__c.field-meta.xml
<CustomField>
    <fullName>PlannedActivitiesJSON__c</fullName>
    <label>PlannedActivitiesJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>